5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1753_1525.log
== TEST (2019-05-16 19:05:46) 
-- CODE:
vi=int(input("volume inicial: "))
vb=int(input("volume de agua que e bombeado para dentro da masmorra por minuto: "))
vr=int(input("volume de aguya que a elfa retira da masmorra por minuto: "))
min=0
while vi>=1000:
	vi= (vi+vb)-vr
	min= min+1
print(min)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(semanas)
NameError: name 'semanas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:06:21) 
-- CODE:
vi=int(input("volume inicial: "))
vb=int(input("volume de agua que e bombeado para dentro da masmorra por minuto: "))
vr=int(input("volume de aguya que a elfa retira da masmorra por minuto: "))
min=0
while vi>1000:
	vi= (vi+vb)-vr
	min= min+1
print(min)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(semanas)
NameError: name 'semanas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:06:33) 
-- CODE:
vi=int(input("volume inicial: "))
vb=int(input("volume de agua que e bombeado para dentro da masmorra por minuto: "))
vr=int(input("volume de aguya que a elfa retira da masmorra por minuto: "))
min=0
while vi>1000:
	vi= (vi+vb)-vr
	min= min+1
print(min)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(semanas)
NameError: name 'semanas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:06:34) 
-- CODE:
vi=int(input("volume inicial: "))
vb=int(input("volume de agua que e bombeado para dentro da masmorra por minuto: "))
vr=int(input("volume de aguya que a elfa retira da masmorra por minuto: "))
min=0
while vi>1000:
	vi= (vi+vb)-vr
	min= min+1
print(min)
-- EXECUTION TIME:
0.235046
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
3000
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
110
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
